--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>w3w-gsi-tiles</title>
 <meta charset='UTF-8'/>
 <!-- leaflet 1.0.0 beta 2 -->
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v1.0.0-beta.2/leaflet.css"/>
+<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v1.0.0-rc.1/leaflet.css"/>
 <style>
 body {padding: 0; margin: 0;}
 html, body, #map {height: 100%; width: 100%;}
@@ -13,15 +13,22 @@ html, body, #map {height: 100%; width: 100%;}
 </head>
 <body>
 <div id="map"></div>
-<script src="http://cdn.leafletjs.com/leaflet/v1.0.0-beta.2/leaflet.js"></script>
+<script src="http://cdn.leafletjs.com/leaflet/v1.0.0-rc.1/leaflet.js"></script>
 <script src='js/corslite.js'></script>
 <script src='js/leaflet.CenterCross.js'></script>
 <script>
 // https://api.what3words.com/position?key=A5PYWQCE&position=35,135
 var map = L.map('map');
-L.tileLayer('http://cyberjapandata.gsi.go.jp/xyz/std/{z}/{x}/{y}.png', {
+var std = L.tileLayer('http://cyberjapandata.gsi.go.jp/xyz/std/{z}/{x}/{y}.png', {
   attribution: "<a href='http://maps.gsi.go.jp/development/ichiran.html' target='_blank'>地理院タイル</a>"
-}).addTo(map);
+});
+var kumamoto = L.tileLayer('http://cyberjapandata.gsi.go.jp/xyz/20160414kumamoto_0416dol1/{z}/{x}/{y}.png', {
+  attribution: "<a href='http://maps.gsi.go.jp/development/ichiran.html' target='_blank'>地理院タイル</a>"
+});
+std.addTo(map);
+var base_layers = {"標準地図": std, "熊本": kumamoto};
+var overlays = {};
+L.control.layers(base_layers, overlays).addTo(map);
 var show_words = function() {
   var c = map.getCenter();
   corslite('https://api.what3words.com/position?key=A5PYWQCE&position=' +
